# kitchensync

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DockerFile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
api/db/: connection.py
api/models/: schemas.py
api/routes/: events.py  sales.py
config/: menu.yaml  stores.yaml
dashboard/: app.py
dashboard/components/: production_plan.py  store_selector.py  waste_summary.py
dashboard/utils/: data_fetch.py
data/: ab_results.json
dbt/: dbt_project.yml
dbt/models/marts/: mart_cold_start_profile.sql  mart_item_velocity.sql  mart_ml_training_features.sql  mart_production_targets.sql  mart_stockout_summary.sql  mart_store_sales.sql  mart_store_sales_15min.sql  mart_store_traffic_ratio.sql  mart_waste_percentage.sql  models.yml
dbt/models/metrics/: metrics_forecast_accuracy.sql  metrics_stockout_rate.sql
dbt/models/staging/: models.yml  sources.yml  stg_sales_events.sql  stg_stockout_events.sql  stg_waste_log.sql
dbt/seeds/: menu_items.csv  stores.csv
ml/: evaluate.py  features.py  predict.py  train.py
ml/models/: item_encoder.joblib  lgbm.joblib  store_encoder.joblib
scripts/: delete_simulation_data.py  extract_to_snowflake.py  init_db.py  run_daily_simulation.py  run_pipeline.py  update_dbt_token.py
simulator/: fast_historical_generator.py  historical_generator.py  pos_simulator.py
