[project]
name = "kitchensync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "snowflake-connector-python>=4.5.0",
    "snowflake-sqlalchemy>=1.10.0",
    "streamlit>=1.57.0",
    "dbt-core>=1.8.0",
    "dbt-snowflake>=1.8.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.3",
    "streamlit-autorefresh>=1.0.1",
]

[dependency-groups]
dev = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "uvicorn>=0.46.0",
]
